fix: button-round z-index over footer

--- a/src/index.css
+++ b/src/index.css
@@ -143,6 +143,7 @@ button:hover {
     padding: 15px;
     width: 50px;
     height: 50px;
+    z-index: 1;
 }
 
 .button-round:hover {
